created new visit html page with all visit information to match schema, also got mongo started but it's not sending to DB just yet

--- a/client/partials/individualVisit.html
+++ b/client/partials/individualVisit.html
@@ -3,3 +3,8 @@
 
 <div ng-include="'partials/navbar.html'"></div>
 
+<ul>
+  <li ng-repeat="visit in visits">
+    {{visit.doctor}}: {{visit.type}}
+  </li>
+</ul>
