added outline for individual visit page so that data can be retrieved and placed in to page

--- a/client/partials/previousVisit.html
+++ b/client/partials/previousVisit.html
@@ -2,3 +2,9 @@
 <h1>Previous Visit Page</h1>
 
 <div ng-include="'partials/navbar.html'"></div>
+
+<ul>
+  <li ng-repeat="visit in visits">
+    {{visit.doctor}}: {{visit.type}}
+  </li>
+</ul>
