info being saved up to pharmacy info

--- a/client/partials/register.html
+++ b/client/partials/register.html
@@ -44,7 +44,7 @@
   <hr>
   Pharmacy Info: <input type="text" ng-model="name" placeholder="Name">
   <input type="text" ng-model="address" placeholder="Address" />
-  <input type="string" ng-model="phone" placeholder="Phone" />
+  <input type="string" ng-model="pharmacyPhone" placeholder="Phone" />
   <hr>
   Email: <input type="email" ng-model="email" placeholder="Enter Email Address">
   Password: <input type="password" ng-model="password" placeholder="Enter Password">
