--- a/client/partials/login.html
+++ b/client/partials/login.html
@@ -1,2 +1,6 @@
 <h1>{{title}}</h1>
 <h1>Login Page</h1>
+
+Email: <input type="email" name="">
+Password: <input type="password" name="">
+<input type="submit" value="Login">
