--- a/client/partials/register.html
+++ b/client/partials/register.html
@@ -51,5 +51,5 @@
   <hr>
   Phone: <input type="phone" ng-model="phone" placeholder="Enter Phone Number">
   <hr>
-  <input type="submit" />
+  <input type="submit" value="Register" />
 </form>
