--- a/client/partials/splash.html
+++ b/client/partials/splash.html
@@ -1,2 +1,5 @@
 <h1>{{title}}</h1>
 <h1>Splash Page</h1>
+
+<input type="submit" ng-click="" value="Login">
+<input type="submit" ng-click="" value="Register">
