added navbar to proper views and they link to the proper pages associated with their a tags

--- a/client/partials/individualVisit.html
+++ b/client/partials/individualVisit.html
@@ -1,7 +1,7 @@
 <h1>{{title}}</h1>
 <h1>Individual Visit Page</h1>
 
-<div ng-include="'partials/navbar.html'"></div>
+<div ng-include="'partials/navBar.html'"></div>
 
 <form ng-submit="sendNewVisit()">
   Physician: <input type="text" ng-model="physicianName" placeholder="Name of Physician" />
