--- a/client/partials/navbar.html
+++ b/client/partials/navbar.html
@@ -1,2 +1,8 @@
-<h1>Nav Bar</h1>
-<h2>How nice is this nav bar?</h2>
+<!-- <h1>Nav Bar</h1> -->
+<!-- <h2>How nice is this nav bar?</h2> -->
+
+<a href='/#/welcome' title="">Welcome</a>
+<a href='/#/newvisit' title="">New Visit</a>
+<a href='/#/previousvisit' title="">Previous Visit</a>
+<a href='/#/individualvisit' title="">Individual Visit</a>
+<hr>
