--- a/client/partials/previousVisit.html
+++ b/client/partials/previousVisit.html
@@ -1,7 +1,7 @@
 <h1>{{title}}</h1>
 <h1>Previous Visit Page</h1>
 
-<div ng-include="'partials/navbar.html'"></div>
+<div ng-include="'partials/navBar.html'"></div>
 
 <ul>
   <li ng-repeat="visit in visits">
