fixed get for previous visits page, added simple verbage to visualize what's happening on previous visit page

--- a/client/partials/previousVisit.html
+++ b/client/partials/previousVisit.html
@@ -3,8 +3,20 @@
 
 <div ng-include="'partials/navBar.html'"></div>
 
-<ul>
+<div class="physician">
+  <div>
+    Name of Physician
+  </div>
+</div>
+
+<div class="visit">
+  <div>
+    Date of Visit
+  </div>
+</div>
+
+<!-- <ul>
   <li ng-repeat="visit in visits">
     {{visit.doctor}}: {{visit.type}}
   </li>
-</ul>
+</ul> -->
