added label for previous visit, doctor and date of visit

--- a/client/partials/previousVisit.html
+++ b/client/partials/previousVisit.html
@@ -5,6 +5,6 @@
 
 <ul>
   <li ng-repeat="visit in visits">
-    <a>{{visit.physicianName}}: {{visit.type}}</a>
+    <a>Dr.: {{visit.physicianName}}: Date of Visit: {{visit.type}}</a>
   </li>
 </ul>
