changed navbar logic and got rid of welcome page, no point, will show up on splash page instead

--- a/client/partials/login.html
+++ b/client/partials/login.html
@@ -1,6 +1,8 @@
 <h1>{{title}}</h1>
 <h1>Login Page</h1>
 
+<div ng-include="'partials/navBar.html'"></div>
+
 Email: <input type="email" name="">
 Password: <input type="password" name="">
 <input type="submit" value="Login">
