--- a/client/partials/navbar.html
+++ b/client/partials/navbar.html
@@ -1,7 +1,9 @@
 <!-- <h1>Nav Bar</h1> -->
 <!-- <h2>How nice is this nav bar?</h2> -->
 
-<a href='/#/welcome' title="">Welcome</a>
+<a href='/#/' title="">Welcome</a>
+<a href='/#/login' title="">Login</a>
+<a href='/#/register' title="">Register</a>
 <a href='/#/newvisit' title="">New Visit</a>
 <a href='/#/previousvisit' title="">Previous Visit</a>
 <a href='/#/individualvisit' title="">Individual Visit</a>
