--- a/client/partials/splash.html
+++ b/client/partials/splash.html
@@ -1,5 +1,4 @@
 <h1>{{title}}</h1>
-<h1>Splash Page</h1>
+<h1>Welcome Page</h1>
 
-<input type="submit" ng-click="" value="Login">
-<input type="submit" ng-click="" value="Register">
+<div ng-include="'partials/navBar.html'"></div>
