edited the login, splash and navbar partials to include bootstrap functionality

--- a/client/partials/splash.html
+++ b/client/partials/splash.html
@@ -2,3 +2,6 @@
 <h1>Welcome Page</h1>
 
 <div ng-include="'partials/navBar.html'"></div>
+
+<a class="btn btn-primary" href="/#/login">Login</a>
+<a class="btn btn-primary" href="/#/register">Register</a>
