--- a/client/partials/login.html
+++ b/client/partials/login.html
@@ -5,4 +5,5 @@
 
 Email: <input type="email" name="">
 Password: <input type="password" name="">
-<input type="submit" value="Login">
+<a class="btn btn-primary" href="/#/login">Login</a>
+
