--- a/client/partials/login.html
+++ b/client/partials/login.html
@@ -3,7 +3,9 @@
 
 <div ng-include="'partials/navBar.html'"></div>
 
+<form ng-submit="loginUser()">
 Email: <input type="email" name="">
 Password: <input type="password" name="">
-<a class="btn btn-primary" href="/#/login">Login</a>
+<input type="submit" value="Login" />
+</form>
 
