welcome message present with email name

--- a/client/partials/newVisit.html
+++ b/client/partials/newVisit.html
@@ -1,7 +1,10 @@
 <h1>{{title}}</h1>
 <h1>New Visit Page</h1>
 
+<div>Welcome {{registers}}</div>
+
 <div ng-include="'partials/navBar.html'"></div>
+
 
 <form ng-submit="sendNewVisit()">
   Physician: <input type="text" ng-model="physicianName" placeholder="Name of Physician" />
