welcome message happening on all visit views

--- a/client/partials/individualVisit.html
+++ b/client/partials/individualVisit.html
@@ -1,6 +1,8 @@
 <h1>{{title}}</h1>
 <h1>Individual Visit Page</h1>
 
+<div>Welcome {{registers}}</div>
+
 <div ng-include="'partials/navBar.html'"></div>
 
 <form>
