--- a/client/partials/previousVisit.html
+++ b/client/partials/previousVisit.html
@@ -1,6 +1,8 @@
 <h1>{{title}}</h1>
 <h1>Previous Visit Page</h1>
 
+<div>Welcome {{registers}}</div>
+
 <div ng-include="'partials/navBar.html'"></div>
 
 <ul>
