--- a/client/partials/individualVisit.html
+++ b/client/partials/individualVisit.html
@@ -43,7 +43,7 @@
   <hr>
   <textarea ng-model="afterCare" placeholder="After Care" cols="100" rows="3"></textarea>
   <hr>
-  <input type="submit" value="Modify" />
+  <input type="submit" value="Modify" ng-click="modify()" />
   <input type="submit" value="Delete" />
   <input type="submit" value="Cancel" />
 </form>
