logout, modify and delete are all functioning

--- a/client/partials/individualVisit.html
+++ b/client/partials/individualVisit.html
@@ -44,6 +44,6 @@
   <textarea ng-model="afterCare" placeholder="After Care" cols="100" rows="3"></textarea>
   <hr>
   <input type="submit" value="Modify" ng-click="modify()" />
-  <input type="submit" value="Delete" />
+  <input type="submit" value="Delete" ng-click="delete()" />
   <input type="submit" value="Cancel" />
 </form>
