--- a/client/partials/navbar.html
+++ b/client/partials/navbar.html
@@ -1,8 +1,10 @@
 <!-- <h1>Nav Bar</h1> -->
 <!-- <h2>How nice is this nav bar?</h2> -->
-
-<a href='/#/' title="">Welcome</a>
-<a href='/#/newvisit' title="">New Visit</a>
-<a href='/#/previousvisit' title="">Previous Visit</a>
-<a href='/#/individualvisit' title="">Individual Visit</a>
+<div ng-controller="navController">
+  <a ng-href='/#/' title="">Welcome</a>
+  <a ng-href='/#/newvisit' title="">New Visit</a>
+  <a ng-href='/#/previousvisit' title="">Previous Visit</a>
+  <a ng-href='/#/individualvisit' title="">Individual Visit</a>
+  <a ng-click="logout()" ng-show="user" title="">Logout</a>
+</div>
 <hr>
