made some styling changes, this is post MVP which was the last commit

--- a/client/partials/individualVisit.html
+++ b/client/partials/individualVisit.html
@@ -13,7 +13,9 @@
   <input type="text" ng-model="address" ng-value="visit.contactInfo.address" placeholder="Address" />
   <input type="email" ng-model="email" ng-value="visit.contactInfo.email" placeholder="Email" />
   <hr>
-  Personal Stats: <input type="number" ng-model="weight" ng-value="visit.weight" placeholder="Weight in Pounds">
+  Personal Stats
+  <hr>
+  Weight:<input type="number" ng-model="weight" ng-value="visit.weight" placeholder="Weight in Pounds">
   Height: <input type="number" ng-model="foot" ng-value="visit.height.foot" placeholder="Foot">
   <input type="number" ng-model="inches" ng-value="visit.height.inches" placeholder="Inches">
   <hr>
