--- a/client/partials/newVisit.html
+++ b/client/partials/newVisit.html
@@ -14,7 +14,9 @@
   <input type="text" ng-model="address" placeholder="Address" />
   <input type="email" ng-model="email" placeholder="Email" />
   <hr>
-  Personal Stats: <input type="number" ng-model="weight" placeholder="Weight in Pounds">
+  Personal Stats
+  <hr>
+  Weight: <input type="number" ng-model="weight" placeholder="Weight in Pounds">
   Height: <input type="number" ng-model="foot" placeholder="Foot">
   <input type="number" ng-model="inches" placeholder="Inches">
   <hr>
