--- a/client/partials/previousVisit.html
+++ b/client/partials/previousVisit.html
@@ -1,7 +1,7 @@
 <h1>{{title}}</h1>
-<h1>Previous Visit Page</h1>
+<!-- <h1>Previous Visit Page</h1> -->
 
-<div>Welcome {{registers}}</div>
+<h3>Welcome {{registers}}</h3>
 
 <div ng-include="'partials/navBar.html'"></div>
 
