--- a/client/partials/login.html
+++ b/client/partials/login.html
@@ -5,6 +5,6 @@
 <form ng-submit="loginUser()">
 Email: <input type="email" name="email" ng-model="email">
 Password: <input type="password" name="password" ng-model="password">
-<input type="submit" value="Login" />
+<input class="btn btn-primary" type="submit" value="Login" />
 </form>
 
