--- a/client/partials/splash.html
+++ b/client/partials/splash.html
@@ -3,4 +3,4 @@
 <div ng-include="'partials/navBar.html'"></div>
 
 <a class="btn btn-primary" href="/#/login">Login</a>
-<a class="btn btn-primary" href="/#/register">Register</a>
+<a class="btn btn-danger" href="/#/register">Register</a>
